--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -2,3 +2,7 @@
 
 <p>Title: <%= @post.title %></p>
 <p>Description: <%= @post.description %></p>
+
+<%= link_to "Edit", edit_post_path(@post) %>
+|
+<%= link_to "Back", posts_path %>
