--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -13,6 +13,7 @@
       <td><%= post.title %></td>
       <td><%= link_to 'edit', edit_post_path(post) %></td>
       <td><%= link_to 'show', post_path(post) %></td>
+      <td><%= link_to 'delete', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
   <% end %>
 </table>
