--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -10,7 +10,7 @@
   <% @posts.each do |post|%>
     <tr>
       <td><%= post.title %></td>
-      <td><%= post.title %></td>
+      <td><%= post.description %></td>
       <td><%= link_to 'edit', edit_post_path(post) %></td>
       <td><%= link_to 'show', post_path(post) %></td>
       <td><%= link_to 'delete', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
