--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -2,22 +2,8 @@
 <p>
   <%= link_to "Create New", new_post_path %>
 </p>
-<table>
-  <tr>
-    <th>Title:</th>
-    <th>Description:</th>
-    <th>Created by:</th>
-    <th>Created:</th>
-  </tr>
-  <% @posts.each do |post|%>
-    <tr>
-      <td><%= post.title %></td>
-      <td><%= post.description %></td>
-      <td><%= post.user.username %></td>
-      <td><%= time_ago_in_words(post.created_at) %>  ago </td>
-      <td><%= link_to ' | edit | ', edit_post_path(post) %></td>
-      <td><%= link_to ' | show | ', post_path(post) %></td>
-      <td><%= link_to ' | delete | ', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-  <% end %>
-</table>
+
+<%= render "post", obj: @posts %>
+
+
+
