--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,4 +1,5 @@
 <h1>All Users</h1>
+<%= will_paginate %>
 <% @users.each do |user| %>
 
   <ul>
@@ -14,3 +15,4 @@
   </ul>
 
 <% end %>
+<%= will_paginate %>
