--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,6 @@
 <h1><%= @user.username %></h1>
 <%= gravatar_for @user, size: 150 %>
 <h4><%= @user.username %></h4>
-<%= render 'posts/post', obj: @user.posts %>
+<%= will_paginate @user_posts %>
+<%= render 'posts/post', obj: @user_posts %>
+<%= will_paginate @user_posts %>
