--- a/app/views/layouts/_jumbotron.erb
+++ b/app/views/layouts/_jumbotron.erb
@@ -5,7 +5,7 @@
     </div>
     <br>
     <p class="center">
-      <button class="btn btn-primary">Sign Up!</button>
+      <%= link_to "Sign up", signup_path, class: "btn btn-primary" %>
     </p>
   </div>
 </div>
