--- a/app/views/posts/_post.erb
+++ b/app/views/posts/_post.erb
@@ -11,9 +11,11 @@
       <td><%= post.description %></td>
       <td><%= post.user.username %></td>
       <td><%= time_ago_in_words(post.created_at) %>  ago </td>
-      <td><%= link_to ' | edit | ', edit_post_path(post) %></td>
-      <td><%= link_to ' | show | ', post_path(post) %></td>
-      <td><%= link_to ' | delete | ', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
+      <% if logged_in? && current_user == post.user %>
+        <td><%= link_to ' | edit | ', edit_post_path(post) %></td>
+        <td><%= link_to ' | show | ', post_path(post) %></td>
+        <td><%= link_to ' | delete | ', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
