--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -15,7 +15,7 @@
   </ul>
 <p>Description: <%= @post.description %></p>
 
-<% if logged_in? && current_user == @post.user %>
+<% if logged_in? && (current_user == @post.user || current_user.admin?) %>
 <%= link_to "Edit", edit_post_path(@post) %>
 <% end %>
 <%= link_to "Back", posts_path %>
