--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -12,6 +12,9 @@
     <li>
       <%= pluralize(user.posts.count, "post") if user.posts %>
     </li>
+    <% if logged_in? && current_user.admin? %>
+      <li><%= link_to "Delete", user_path(user), method: :delete, data: { confirm: "Are you sure?"} %></li>
+    <% end %>
   </ul>
 
 <% end %>
