--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,3 +4,7 @@
 <%= will_paginate @user_posts %>
 <%= render 'posts/post', obj: @user_posts %>
 <%= will_paginate @user_posts %>
+<% if logged_in? && (current_user == @user || current_user.admin?) %>
+  <%= link_to ' | edit | ', edit_user_path(@user) %>
+  <%= link_to ' | delete | ', user_path(@user), method: :delete, data: {confirm: "Are you sure?"} %>
+<% end %>
