--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -18,15 +18,15 @@
         <li><%= link_to "Users", users_path %></li>
         <% if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category options <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><%= link_to "Categories Listing", categories_path %></li>
+              <% if logged_in? && current_user.admin? %>
+                <li><%= link_to "New Category", new_category_path %></li>
+              <% end %>
+              <% Category.all.each do |category| %>
+                <li><%= link_to category.name, category_path(category) %></li>
+              <% end %>
             </ul>
           </li>
         <% end %>
