--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -5,6 +5,7 @@
     <% @categories.each do |category| %>
       <li>
         <%= link_to "#{category.name}", category_path(category) %>
+        <%= pluralize(category.posts.count, "post") %>
       </li>
     <% end %>
   <%= will_paginate %>
