--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -14,7 +14,9 @@
     </li>
   </ul>
 <p>Description: <%= @post.description %></p>
-
+<% if @post.categories.any? %>
+  <p>Categories: <%= render @post.categories %></p>
+<% end %>
 <% if logged_in? && (current_user == @post.user || current_user.admin?) %>
 <%= link_to "Edit", edit_post_path(@post) %>
 <% end %>
